--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,18 +8,17 @@ orbs:
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
-workflows:
-  sample: # This is the name of the workflow, feel free to change it to better match your workflow.
-    # Inside the workflow, you define the jobs you want to run.
 jobs:
-  - build:
+  build:
       docker:
         - image: "cimg/base::stable"
       steps:
         - node/install
         - checkout
         - run:
-          name: hello
-          command: |
-            echo "hello-world"
+            name: hello
+            command: |
+              echo "hello-world"
+
+
 
