--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ orbs:
 jobs:
   build:
       docker:
-        #- image: "cimg/base::stable"
+        - image: ""
       steps:
         - node/install
         - checkout
