--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,18 +5,20 @@ version: 2.1
 # See: https://circleci.com/docs/2.0/orb-intro/
 orbs:
   node: circleci/node@4.7
+  win: circleci/windows@2.2.0
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 jobs:
   build:
-      docker:
-        - image: ""
+      executor:
+        name: win/default # executor type
+        size: "medium" # resource class, can be "medium", "large", "xlarge", "2xlarge", defaults to "medium" if not specified
       steps:
         - node/install
         - checkout
-        - run:
-            name: hello
-            command: |
-              echo "hello-world"
+        - run:  Write-Host 'Hello, Windows'
+            #name: hello
+            #command: |
+            #  echo "hello-world"
 
