--- a/udagram-api/package.json
+++ b/udagram-api/package.json
@@ -9,7 +9,7 @@
     "dev": "ts-node-dev --respawn --transpileOnly ./src/server.ts",
     "prod": "tsc && node ./www/server.js",
     "clean": "rd -r www/ || true",
-    "build": "npx tsc && copy src/config www/config && copy .npmrc www/.npmrc && copy package.json www/package.json ",
+    "build": "npx tsc ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
