--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,9 +15,9 @@ jobs:
         name: win/default # executor type
         size: "medium" # resource class, can be "medium", "large", "xlarge", "2xlarge", defaults to "medium" if not specified
       steps:
-        - node/install:
+        #- node/install:
             #install-yarn: true
-            node-version: '16.13'
+            #node-version: '16.13'
         - checkout
         - run:
             name: Front-End install
