--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,7 @@ version: 2.1
 orbs:
   node: circleci/node@4.7
   win: circleci/windows@2.2.0
+  aws-cli: circleci/aws-cli@2.1.0
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
@@ -19,6 +20,7 @@ jobs:
             #install-yarn: true
             #node-version: '16.13'
         - checkout
+        - aws-cli/setup
         - run:
             name: Front-End install
             command: |
@@ -35,4 +37,8 @@ jobs:
             name: Back-End build
             command: |
               npm run backend:build
+        - run:
+            name: Front-End deploy
+            command: |
+              npm run frontend:deploy
 
