--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,10 +15,10 @@ jobs:
       executor:
         name: win/default # executor type
         size: "medium" # resource class, can be "medium", "large", "xlarge", "2xlarge", defaults to "medium" if not specified
+      docker:
+        - image: "cimg/base:stable"
       steps:
-        #- node/install:
-            #install-yarn: true
-            #node-version: '16.13'
+        - node/install
         - checkout
         - aws-cli/setup
         - run:
