--- a/udagram-frontend/package.json
+++ b/udagram-frontend/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng --openssl-legacy-provider build ",
+    "build": "ng build ",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy" : "ng --openssl-legacy-provider build --prod  && aws s3 cp --recursive --acl public-read ./www s3://static-udagram/"
+    "deploy" : "ng build --prod  && aws s3 cp --recursive --acl public-read ./www s3://static-udagram/"
   },
   "private": true,
   "dependencies": {
