--- a/udagram-frontend/package.json
+++ b/udagram-frontend/package.json
@@ -10,7 +10,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy" : "ng build --prod  && aws s3 cp --recursive --acl public-read ./www s3://static-udagram/"
+    "deploy" : "npm run build && aws s3 cp --recursive --acl public-read ./www s3://static-udagram/"
   },
   "private": true,
   "dependencies": {
