--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,9 @@ orbs:
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 jobs:
   build:
+      filters:
+            branches:
+              only: master
       docker:
         - image: "cimg/base:stable"
       steps:
@@ -36,6 +39,14 @@ jobs:
             name: Back-End build
             command: |
               npm run backend:build
+        - run:
+            name: front-End test
+            command: |
+              npm run frontend:test
+        - run:
+            name: Back-End test
+            command: |
+              npm run backend:test
         - run:
             name: Front-End deploy
             command: |
