--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
         "backend:install" : "cd udagram-api && npm install",
         "frontend:build" : "cd udagram-frontend && npm run build",
         "backend:build" : "cd udagram-api && npm run build",
+        "frontend:test" : "cd udagram-frontend && npm run test",
+        "backend:test" : "cd udagram-api && npm run test",
         "frontend:deploy" : "cd udagram-frontend && npm run deploy"
 
     },
