--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,9 +12,6 @@ orbs:
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 jobs:
   build:
-      filters:
-            branches:
-              only: master
       docker:
         - image: "cimg/base:stable"
       steps:
@@ -51,4 +48,12 @@ jobs:
             name: Front-End deploy
             command: |
               npm run frontend:deploy
+workflows:
+  version: 2
+  build-deploy:
+    jobs:
+      - build:
+          filters:
+            branches:
+              only: master
 
