--- a/udagram-frontend/package.json
+++ b/udagram-frontend/package.json
@@ -10,7 +10,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy" : "npm run build && aws s3 cp --recursive --acl public-read ./www s3://static-udagram/"
+    "deploy": "npm run build && aws s3 cp --recursive --acl public-read ./www s3://static-udagram/"
   },
   "private": true,
   "dependencies": {
@@ -53,6 +53,7 @@
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
+    "puppeteer": "^13.5.1",
     "ts-node": "~8.0.0",
     "tslint": "~5.12.0",
     "typescript": "^3.5.3"
