--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "backend:install" : "cd udagram-api && npm install",
         "frontend:build" : "cd udagram-frontend && npm run build",
         "backend:build" : "cd udagram-api && npm run build",
-        "frontend:test" : "cd udagram-frontend && npm run test",
+        "frontend:test" : "cd udagram-frontend && npm run test && exit 1",
         "backend:test" : "cd udagram-api && npm run test",
         "frontend:deploy" : "cd udagram-frontend && npm run deploy"
 
