--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,13 +7,14 @@ orbs:
   node: circleci/node@4.7
   win: circleci/windows@2.2.0
   aws-cli: circleci/aws-cli@2.1.0
+  browser-tools: circleci/browser-tools@1.2.3
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 jobs:
   build:
       docker:
-        - image: circleci/node:6-browsers #"cimg/base:stable"
+        - image: cimg/node:16.13.1-browsers #circleci/node:6-browsers #"cimg/base:stable"
           environment:
             CHROME_BIN: "/usr/bin/google-chrome"
       steps:
@@ -22,6 +23,11 @@ jobs:
         - node/install:
             install-yarn: false
             node-version: '16.13'
+        - run:
+          command: |
+            google-chrome --version
+            chromedriver --version
+          name: Check install
         - run:
             name: Front-End install
             command: |
