--- a/udagram-frontend/package.json
+++ b/udagram-frontend/package.json
@@ -7,7 +7,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build ",
-    "test": "ng test && exit 1",
+    "test": "ng test --no-watch --no-progress --browsers=ChromeHeadless",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "deploy": "npm run build && aws s3 cp --recursive --acl public-read ./www s3://static-udagram/"
